// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader should render option correctly when using defaultValue prop 1`] = `
<Cascader
  closeIcon="cross"
  closeable={true}
  defaultValue={
    Array [
      "330000",
    ]
  }
  options={
    Array [
      Object {
        "children": Array [
          Object {
            "text": "杭州市",
            "value": "330100",
          },
        ],
        "text": "浙江省",
        "value": "330000",
      },
      Object {
        "children": Array [
          Object {
            "text": "南京市",
            "value": "320100",
          },
        ],
        "text": "江苏省",
        "value": "320000",
      },
    ]
  }
  swipeable={true}
>
  <div
    className="rc-cascader"
  >
    <div
      className="rc-cascader__header"
    >
      <h2
        className="rc-cascader__title"
      />
      <Icon
        className="rc-cascader__close-icon"
        name="cross"
        onClick={[Function]}
        tag="i"
      >
        <Badge
          className="rc-cascader__close-icon van-icon van-icon-cross"
          onClick={[Function]}
          showZero={true}
          style={
            Object {
              "color": undefined,
              "fontSize": undefined,
            }
          }
          tag="i"
        >
          <i
            className="rc-badge__wrapper rc-cascader__close-icon van-icon van-icon-cross"
            onClick={[Function]}
            style={
              Object {
                "color": undefined,
                "fontSize": undefined,
              }
            }
          />
        </Badge>
      </Icon>
    </div>
    <ForwardRef
      active={0}
      animated={true}
      className="rc-cascader__tabs"
      duration={300}
      ellipsis={true}
      lazyRender={true}
      offsetTop={0}
      onClickTab={[Function]}
      swipeThreshold={0}
      swipeable={true}
      type="line"
    >
      <div
        className="rc-cascader__tabs rc-tabs rc-tabs--line"
      >
        <div
          className="rc-tabs__wrap rc-tabs__wrap--scrollable"
        >
          <div
            className="rc-tabs__nav rc-tabs__nav--line rc-tabs__nav--complete"
            role="tablist"
            style={
              Object {
                "background": undefined,
                "borderColor": undefined,
              }
            }
          >
            <ForwardRef
              className="rc-cascader__tab"
              isActive={true}
              key=".$0"
              onClick={[Function]}
              scrollable={true}
              showZeroBadge={true}
              title="浙江省"
              type="line"
            >
              <div
                aria-selected={true}
                className="rc-tab rc-tab--active rc-cascader__tab"
                onClick={[Function]}
                style={Object {}}
              >
                <span
                  className="rc-tab__text"
                >
                  浙江省
                </span>
              </div>
            </ForwardRef>
            <div
              className="rc-tabs__line"
              style={
                Object {
                  "backgroundColor": undefined,
                }
              }
            />
          </div>
        </div>
        <TabsContent
          animated={true}
          count={1}
          currentIndex={0}
          duration={300}
          inited={true}
          lazyRender={true}
          onChange={[Function]}
          swipeable={true}
        >
          <div
            className="rc-tabs__content rc-tabs__content--animated"
          >
            <Swiper
              allowTouchMove={true}
              autoplay={false}
              autoplayInterval={300}
              className="rc-tabs__track"
              defaultIndex={0}
              indicator={false}
              loop={false}
              onIndexChange={[Function]}
              slideSize={100}
              stuckAtBoundary={false}
              trackOffset={0}
            >
              <div
                className="rc-tabs__track rc-swiper"
                style={
                  Object {
                    "--rc-swipe-slide-size": "100%",
                    "--rc-swipe-track-offset": "0%",
                  }
                }
              >
                <div
                  className="rc-swiper__track rc-swiper__track--allow-touch-move"
                  onClickCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                >
                  <div
                    className="rc-swiper__track-inner"
                  >
                    <Animated(div)
                      className="rc-swiper__slide"
                      key=".$.$.$.$0"
                      style={
                        Object {
                          "left": "-0%",
                          "x": "0%",
                        }
                      }
                    >
                      <div
                        className="rc-swiper__slide"
                        style={
                          Object {
                            "left": "-0%",
                            "transform": "none",
                          }
                        }
                      >
                        <SwiperItem
                          className="rc-tabs__pane-wrapper"
                          key=".$.$.$0"
                          style={
                            Object {
                              "cursor": undefined,
                            }
                          }
                        >
                          <div
                            className="rc-tabs__pane-wrapper rc-swiper-item"
                            style={
                              Object {
                                "cursor": undefined,
                              }
                            }
                          >
                            <ForwardRef
                              index={0}
                              key=".$0"
                              showZeroBadge={true}
                              title="浙江省"
                              titleClass="rc-cascader__tab"
                            >
                              <div
                                className="rc-tab__pane"
                              >
                                <ul
                                  className="rc-cascader__options"
                                  key="0"
                                >
                                  <li
                                    className="rc-cascader__option rc-cascader__option--selected"
                                    key="330000"
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "color": undefined,
                                      }
                                    }
                                  >
                                    <span>
                                      浙江省
                                    </span>
                                    <Icon
                                      className="rc-cascader__selected-icon"
                                      name="success"
                                      tag="i"
                                    >
                                      <Badge
                                        className="rc-cascader__selected-icon van-icon van-icon-success"
                                        showZero={true}
                                        style={
                                          Object {
                                            "color": undefined,
                                            "fontSize": undefined,
                                          }
                                        }
                                        tag="i"
                                      >
                                        <i
                                          className="rc-badge__wrapper rc-cascader__selected-icon van-icon van-icon-success"
                                          style={
                                            Object {
                                              "color": undefined,
                                              "fontSize": undefined,
                                            }
                                          }
                                        />
                                      </Badge>
                                    </Icon>
                                  </li>
                                  <li
                                    className="rc-cascader__option"
                                    key="320000"
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "color": undefined,
                                      }
                                    }
                                  >
                                    <span>
                                      江苏省
                                    </span>
                                  </li>
                                </ul>
                              </div>
                            </ForwardRef>
                          </div>
                        </SwiperItem>
                      </div>
                    </Animated(div)>
                  </div>
                </div>
              </div>
            </Swiper>
          </div>
        </TabsContent>
      </div>
    </ForwardRef>
  </div>
</Cascader>
`;

exports[`Cascader should render title slot correctly 1`] = `"<h2 class=\\"rc-cascader__title\\">Custom Title</h2>"`;

exports[`Cascader when value change 1`] = `
<Cascader
  closeIcon="cross"
  closeable={true}
  defaultValue={
    Array [
      "330000",
    ]
  }
  options={
    Array [
      Object {
        "children": Array [
          Object {
            "text": "杭州市",
            "value": "330100",
          },
        ],
        "text": "浙江省",
        "value": "330000",
      },
      Object {
        "children": Array [
          Object {
            "text": "南京市",
            "value": "320100",
          },
        ],
        "text": "江苏省",
        "value": "320000",
      },
    ]
  }
  swipeable={true}
  value={
    Array [
      "350000",
    ]
  }
>
  <div
    className="rc-cascader"
  >
    <div
      className="rc-cascader__header"
    >
      <h2
        className="rc-cascader__title"
      />
      <Icon
        className="rc-cascader__close-icon"
        name="cross"
        onClick={[Function]}
        tag="i"
      >
        <Badge
          className="rc-cascader__close-icon van-icon van-icon-cross"
          onClick={[Function]}
          showZero={true}
          style={
            Object {
              "color": undefined,
              "fontSize": undefined,
            }
          }
          tag="i"
        >
          <i
            className="rc-badge__wrapper rc-cascader__close-icon van-icon van-icon-cross"
            onClick={[Function]}
            style={
              Object {
                "color": undefined,
                "fontSize": undefined,
              }
            }
          />
        </Badge>
      </Icon>
    </div>
    <ForwardRef
      active={0}
      animated={true}
      className="rc-cascader__tabs"
      duration={300}
      ellipsis={true}
      lazyRender={true}
      offsetTop={0}
      onClickTab={[Function]}
      swipeThreshold={0}
      swipeable={true}
      type="line"
    >
      <div
        className="rc-cascader__tabs rc-tabs rc-tabs--line"
      >
        <div
          className="rc-tabs__wrap rc-tabs__wrap--scrollable"
        >
          <div
            className="rc-tabs__nav rc-tabs__nav--line rc-tabs__nav--complete"
            role="tablist"
            style={
              Object {
                "background": undefined,
                "borderColor": undefined,
              }
            }
          >
            <ForwardRef
              className="rc-cascader__tab"
              isActive={true}
              key=".$0"
              onClick={[Function]}
              scrollable={true}
              showZeroBadge={true}
              title="浙江省"
              type="line"
            >
              <div
                aria-selected={true}
                className="rc-tab rc-tab--active rc-cascader__tab"
                onClick={[Function]}
                style={Object {}}
              >
                <span
                  className="rc-tab__text"
                >
                  浙江省
                </span>
              </div>
            </ForwardRef>
            <div
              className="rc-tabs__line"
              style={
                Object {
                  "backgroundColor": undefined,
                }
              }
            />
          </div>
        </div>
        <TabsContent
          animated={true}
          count={1}
          currentIndex={0}
          duration={300}
          inited={true}
          lazyRender={true}
          onChange={[Function]}
          swipeable={true}
        >
          <div
            className="rc-tabs__content rc-tabs__content--animated"
          >
            <Swiper
              allowTouchMove={true}
              autoplay={false}
              autoplayInterval={300}
              className="rc-tabs__track"
              defaultIndex={0}
              indicator={false}
              loop={false}
              onIndexChange={[Function]}
              slideSize={100}
              stuckAtBoundary={false}
              trackOffset={0}
            >
              <div
                className="rc-tabs__track rc-swiper"
                style={
                  Object {
                    "--rc-swipe-slide-size": "100%",
                    "--rc-swipe-track-offset": "0%",
                  }
                }
              >
                <div
                  className="rc-swiper__track rc-swiper__track--allow-touch-move"
                  onClickCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                >
                  <div
                    className="rc-swiper__track-inner"
                  >
                    <Animated(div)
                      className="rc-swiper__slide"
                      key=".$.$.$.$0"
                      style={
                        Object {
                          "left": "-0%",
                          "x": "0%",
                        }
                      }
                    >
                      <div
                        className="rc-swiper__slide"
                        style={
                          Object {
                            "left": "-0%",
                            "transform": "none",
                          }
                        }
                      >
                        <SwiperItem
                          className="rc-tabs__pane-wrapper"
                          key=".$.$.$0"
                          style={
                            Object {
                              "cursor": undefined,
                            }
                          }
                        >
                          <div
                            className="rc-tabs__pane-wrapper rc-swiper-item"
                            style={
                              Object {
                                "cursor": undefined,
                              }
                            }
                          >
                            <ForwardRef
                              index={0}
                              key=".$0"
                              showZeroBadge={true}
                              title="浙江省"
                              titleClass="rc-cascader__tab"
                            >
                              <div
                                className="rc-tab__pane"
                              >
                                <ul
                                  className="rc-cascader__options"
                                  key="0"
                                >
                                  <li
                                    className="rc-cascader__option rc-cascader__option--selected"
                                    key="330000"
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "color": undefined,
                                      }
                                    }
                                  >
                                    <span>
                                      浙江省
                                    </span>
                                    <Icon
                                      className="rc-cascader__selected-icon"
                                      name="success"
                                      tag="i"
                                    >
                                      <Badge
                                        className="rc-cascader__selected-icon van-icon van-icon-success"
                                        showZero={true}
                                        style={
                                          Object {
                                            "color": undefined,
                                            "fontSize": undefined,
                                          }
                                        }
                                        tag="i"
                                      >
                                        <i
                                          className="rc-badge__wrapper rc-cascader__selected-icon van-icon van-icon-success"
                                          style={
                                            Object {
                                              "color": undefined,
                                              "fontSize": undefined,
                                            }
                                          }
                                        />
                                      </Badge>
                                    </Icon>
                                  </li>
                                  <li
                                    className="rc-cascader__option"
                                    key="320000"
                                    onClick={[Function]}
                                    style={
                                      Object {
                                        "color": undefined,
                                      }
                                    }
                                  >
                                    <span>
                                      江苏省
                                    </span>
                                  </li>
                                </ul>
                              </div>
                            </ForwardRef>
                          </div>
                        </SwiperItem>
                      </div>
                    </Animated(div)>
                  </div>
                </div>
              </div>
            </Swiper>
          </div>
        </TabsContent>
      </div>
    </ForwardRef>
  </div>
</Cascader>
`;
